WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274592
[visionOS] Captions are missing in fullscreen mode
https://bugs.webkit.org/show_bug.cgi?id=274592
Summary
[visionOS] Captions are missing in fullscreen mode
Jer Noble
Reported
2024-05-23 10:32:08 PDT
[visionOS] Captions are missing in fullscreen mode
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2024-05-23 10:32:13 PDT
<
rdar://problem/128502343
>
Jer Noble
Comment 2
2024-05-23 18:00:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29031
EWS
Comment 3
2024-05-28 14:34:35 PDT
Committed
279405@main
(a8256bf61cd7): <
https://commits.webkit.org/279405@main
> Reviewed commits have been landed. Closing PR #29031 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug